--- a/style.css
+++ b/style.css
@@ -2,26 +2,52 @@ body {
   font-family: Helvetica, arial, sans-serif;
 }
 .container {
+  text-align:center;
   background: #f0f0f5;
   padding: 20px;
   width: 50vw;
   min-height:320px;
   margin: 0 auto;
+  box-shadow:0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);;
+}
+h1{
+   color:#8d7d78;
+  
+}
+.question{
+  background:#8d7d78;
+  padding:10px;
+  border-style:double;
+  border-width:10px;
+  border-radius:5px;
+  color:#fff;
+  font-size:25px;
 }
 .notes {
+  color:#fff;
   border-style:double;
   border-color: white;
+  border-width:10px;
   border-radius:5px;
   padding: 20px;
-  background: lightblue;
+  background: #8aa9d8;
 }
-.result,
 .paragraphboxYes,
 .paragraphboxNo,
-.messageAboutPrivilege,
+.end,
 .button-next,
 .notes {
   display: none;
+}
+
+.button-yes{
+  color:#47d147;
+}
+.button-no{
+  color:red;
+}
+.button-next{
+  color:#d7a8b2;
 }
 button {
   font-size: 50px;
@@ -37,20 +63,35 @@ button:hover {
   cursor: pointer;
 }
 button.button-yes:hover {
-  background: green;
-}
-button.button-no:hover {
-  background: red;
-}
-#scoreYes {
-  color: #000;
-  background: #00bcd4;
+  background: #47d147;
+  color:white;
 }
 
-#scoreNo {
-  background: #3399ff;
+button.button-no:hover {
+  background: red;
+  color:white;
+}
+
+button.button-next:hover {
+  background: #d7a8b2;
+  color:white;
 }
 
 .button-yes-no--selected {
   border: 3px solid lightblue;
+  
+}
+
+.button-yes-no--disabled:hover {
+    background: white !important;
+}
+.button-yes.button-yes-no--disabled:hover {
+  color:#47d147;
+}
+.button-no.button-yes-no--disabled:hover {
+  color:red;
+}
+
+.end{
+  background:#666666;
 }
