--- a/style.css
+++ b/style.css
@@ -22,6 +22,11 @@ h1{
   margin-top:50px;
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+
+img{
+  width:100%;
+}
+
 .intro{
   border-style:double;
   border-width:10px;
