--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ img{
   border-style:double;
   border-width:10px;
   border-color:#fff;
-  color:grey;
+  color:#b3b3cc;
   padding:20px;
   width:auto;
   border-radius:5px;
